tests/sumo/errors/routes/false_route1/errors.sumo
Error: The route '0' for vehicle '0' is not known.
Quitting (on error).
